syntax = "proto3";

package at.fhj.swengb.apps.battleship;

option java_package         = "at.fhj.swengb.apps.battleship";
option java_outer_classname = "BattleShipProtobuf";

// einfachste Struktur um alle wichtigen daten zu speichern bzw auszulesen und daf√ºr vorher zu convertieren ; wie originale scala strukturen

message BattleShipGame {
    BattleField battleField = 1;
    repeated BattlePos moves = 2;
}

message BattleField {
    int32 width = 1;
    int32 height = 2;
    Fleet fleet = 3;
}

message Fleet {
    repeated Vessel vessels = 1;
}

message Vessel {
    string name = 1;
    BattlePos startPos = 2;
    Direction direction = 3;
    int32 size = 4;

    enum Direction {
        VERTICAL = 0;
        HORIZONTAL = 1;
    }
}

message BattlePos {
    int32 x = 1;
    int32 y = 2;
}
